# newsroom-mcp-poc

./: .env.example  .gitignore  AZURE_OAUTH_IMPLEMENTATION.md  MIGRATION_TO_AZURE_PROVIDER.md  OAUTH_RESOURCE_PARAMETER_SOLUTION.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  run.py  test_client.py
docs/: AUGMENT_CODE_SETUP.md  CLAUDE_DESKTOP_SETUP.md  OAuth-MCP-Server-MVP.md
src/: __init__.py  config.py  server.py
src/auth/: __init__.py  azure_oidc_proxy.py  patched_azure_provider.py
src/mcp/tools/: __init__.py
src/mcp_features/: __init__.py
src/mcp_features/prompts/: __init__.py  greeting.py
src/mcp_features/resources/: __init__.py  sample.py
src/mcp_features/tools/: echo.py  info.py
tests/: __init__.py
